# transformers-samples

./: .gitignore  LICENSE  README.md
hugging-face-transformers/: Makefile  README.md  hugging-face-transformers-demos.code-workspace  pyproject.toml
hugging-face-transformers/docs/: instructions.txt
hugging-face-transformers/scripts/: poetry-install.sh  poetry-remove.sh  python-install.sh  python-remove.sh
hugging-face-transformers/src/: main.py  transformers_offline.py
openai-service/: OpenAIService.sln  README.md
openai-service/ConsoleChat/: ConsoleChat.csproj  Program.cs
